<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/textPadding_5dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_5dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/txtTitle1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/titleTextSizeNew1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:contentDescription="@string/textAviciiImage"
        android:foregroundGravity="center"
        android:paddingLeft="@dimen/textPadding_5dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_5dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        app:srcCompat="@drawable/avicii" />

    <Button
        android:id="@+id/btnAvicii"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnViewHint"
        android:text="@string/btnViewText"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/btnViewTextSizeNew1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/textPadding_5dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_5dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/txtTitle2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/titleTextSizeNew1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:contentDescription="@string/txtChainsmokersImage"
        android:foregroundGravity="center"
        android:paddingLeft="@dimen/textPadding_5dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_5dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        app:srcCompat="@drawable/chainsmokers" />

    <Button
        android:id="@+id/btnChainsmokers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/btnViewHint"
        android:paddingLeft="@dimen/textPadding_5dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_5dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/btnViewText"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/btnViewTextSizeNew1" />
</LinearLayout>